--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,8 @@
         "guzzlehttp/guzzle": "^7.9",
         "illuminate/contracts": "^11.0||^12.0",
         "nette/php-generator": "^4.2",
-        "spatie/laravel-package-tools": "^1.16"
+        "spatie/laravel-package-tools": "^1.16",
+        "ext-http": "*"
     },
     "require-dev": {
         "laravel/pint": "^1.14",
